Picking up item, showing items and opening doors works